testsuite/tests/grammar/invalid_token_node/common.lkt
import lexer_example

@with_lexer(foo_lexer)
grammar foo_grammar {
    @main_rule main_rule <- Example("example" Identifier(@Identifier))
}

class FooNode implements Node[FooNode] {
}

class Identifier: FooNode implements TokenNode {
}
